nombreux ajout debug et modif pour adaptation

--- a/index.html
+++ b/index.html
@@ -2,48 +2,47 @@
 <html lang="fr"> 
 <!-- commentaire html invisible --> 
 	<head> 
-		<title>Mon Portfolio Thomas Leherisse</title> 
+		<title>Thomas Leherisse Dev & Design Web</title> 
 		<link rel="stylesheet" href="style.css" />
 		<meta charset="utf-8"> 
 		<meta name="author" content="Thomas_L"> 
-		<meta name="description" content="challenge, html, donkeyschool, portfolio"> 
+		<meta name="description" content="portfolio, html, devweb, skills, artworks"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	
 	<body>
+		<h1 class="name">Thomas Leherisse</h1>
+		<h2 class="skills"><em>Web Developer / Designer</em></h2>
 		<header>
-			<h1>MON PORTFOLIO</h1>
-			
 			<nav class="menu">  <!-- debut de la section bouton de navigation-->
 				<ul>
-				  <li class="roll"><a href="#projets" title="lien vers la section projets">PROJETS</a>
+				  <li class="roll"><a href="#projets" title="lien vers la section projets">- MY PROJECTS... -</a>
 					<ul class="subroll">
 					  <li><a href="#PJ1" title="lien vers le projet 1">PROJET 1</a></li>
 					  <li><a href="#PJ2" title="lien vers le projet 2">PROJET 2</a></li>
 					  <li><a href="#PJ3" title="lien vers le projet 3">PROJET 3</a></li>
 					</ul>
 				  </li>
-				  <li class="roll"><a href="#etudes" title="lien vers lla section etudes">ETUDES</a>
+				  <li class="roll"><a href="#etudes" title="lien vers lla section etudes">- ABOUT ME... -</a>
 					<ul class="subroll">
-					  <li><a href="#CV1" title="lien vers mes infos personnelles">Mes infos</a></li>
-					  <li><a href="#CV2" title="lien vers mon parcours scolaire et pro">Mon parcours</a></li>
+					  <li><a href="#CV1" title="lien vers mes infos personnelles">About me...</a></li>
+					  <li><a href="#CV2" title="lien vers mon parcours scolaire et pro">My studies</a></li>
 					</ul>
 				  </li>
-				  <li class="roll"><a href="#articles" title="lien vers la section articles">ARTICLES</a>
+				  <li class="roll"><a href="#artworks" title="lien vers la section artworks">- ARTWORKS -</a>
 					<ul class="subroll">
-					  <li><a href="#AR1" title="lien vers l'article 1">ARTICLE 1</a></li>
-					  <li><a href="#AR2" title="lien vers l'article 2">ARTICLE 2</a></li>
+					  <li><a href="#AR1" title="lien vers l'artwork 1">ARTWORK 1</a></li>
+					  <li><a href="#AR2" title="lien vers l'artwork 2">ARTWORK 2</a></li>
 					</ul>
 				  </li>
-				  <li class="roll"><a href="#contact" title="lien vers la section contact">CONTACT</a></li>
+				  <li class="roll"><a href="#contact" title="lien vers la section contact">- CONTACT ME -</a></li>
 			  </ul>
 			</nav>              <!-- fin de la section boutons de navigation-->
 			
-			</header>
+		</header>
 
 		<section class="cover"> <!-- debut de la section couverture avec nom et photo-->
-			<img class="logo" src="images/dkslogo.jpg" alt="photo donkeyschool"/>
-			<h2 class="name"><em>NOM PRENOM</em></h2>
+			<img class="logo" src="images/chronicoder_logo.jpg" alt="photo donkeyschool"/>
 		</section>      <!-- fin de la section couverture avec nom et photo-->
 				
 		<main>
