modif flex logo add scrolldown

--- a/index.html
+++ b/index.html
@@ -41,11 +41,24 @@
 				  <li class="roll"><a href="#contact" title="lien vers la section contact">- CONTACT ME -</a></li>
 			  </ul>
 			</nav>              <!-- fin de la section boutons de navigation-->
+
 			
 		</header>
 
+		<div class="scrolldown-wrapper">  <!--debut de la section scrolldown picto-->
+			<div class="scrolldown">
+				<svg height="30" width="10">
+					<circle class="scrolldown-p1" cx="5" cy="15" r="2" />
+					<circle class="scrolldown-p2" cx="5" cy="15" r="2" />
+				</svg>
+			</div>
+		</div> <!--fin de la section scrolldown picto-->	
+		
 		<section class="cover"> <!-- debut de la section couverture avec nom et photo-->
-			<img class="logo" src="images/chronicoder_logo.png" alt="photo donkeyschool"/>
+			<div>
+				<img class="logo" src="images/chronicoder_logo.png" alt="photo donkeyschool"/>
+			</div>
+			<p class="cover_p"> Welcome to my portfolio, scroll down and follow me to discover my work</p>
 		</section>      <!-- fin de la section couverture avec nom et photo-->
 				
 		<main>
