modif slider test 1 images

--- a/Showroom.html
+++ b/Showroom.html
@@ -20,11 +20,13 @@
 					<div class="frame frame_1">
 						<div class="frame-content">
 							<h2>Slide 1</h2>
+							<img src="images/chronicover_couv.png" alt="logo de ma chaine youtube chronicover">;
 						</div>
 					</div>
 					<div class="frame frame_2">
 						<div class="frame-content">
 							<h2>Slide 2</h2>
+							<img src="images/chronicoder_logo.png">
 						</div>
 					</div>
 					<div class="frame frame_3">
